syntax = "proto3";
package comdex.asset.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/comdex-official/comdex/x/asset/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

message ExtendedPairVault {
  uint64 id = 1;
  uint64 app_id = 2 [(gogoproto.moretags) = "yaml:\"app_id\""];
  uint64 pair_id = 3 [(gogoproto.moretags) = "yaml:\"pair_id\""];
  string stability_fee = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"stability_fee\""
  ];
  string closing_fee = 5 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"closing_fee\""
  ];

  string liquidation_penalty = 6 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"liquidation_penalty\""
  ];
  string draw_down_fee = 7 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"draw_down_fee\""];

  bool is_vault_active = 8 [(gogoproto.moretags) = "yaml:\"active_flag\""];
  string debt_ceiling = 9[
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"debt_ceiling\""];
  string debt_floor = 10 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"debt_floor\""
  ];
  bool is_stable_mint_vault = 11[(gogoproto.moretags) = "yaml:\"is_stable_mint_vault\""];

  string min_cr = 12 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"min_cr\""
  ];

    string pair_name            = 13 [ (gogoproto.moretags) = "yaml:\"pair_name\"" ];
    bool asset_out_oracle_price = 14 [ (gogoproto.moretags) = "yaml:\"asset_out_oracle_price\"" ];
    uint64 asset_out_price     = 15 [ 
    (gogoproto.moretags) = "yaml:\"asset_out_price\"" ];
    uint64 min_usd_value_left = 16 [ 
    (gogoproto.moretags) = "yaml:\"min_usd_value_left\"" ];
    int64 block_height = 17 [
      (gogoproto.moretags)   = "yaml:\"block_height\""
    ];
    google.protobuf.Timestamp block_time = 18 [
      (gogoproto.nullable) = false,
      (gogoproto.stdtime) = true,
      (gogoproto.moretags)   = "yaml:\"block_time\""
  ];

}