syntax = "proto3";
package comdex.asset.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/comdex-official/comdex/x/asset/types";
option (gogoproto.equal_all)           = false;
option (gogoproto.goproto_getters_all) = false;

message Pair {
  uint64 id                = 1;
  uint64 asset_in          = 2 [ (gogoproto.moretags) = "yaml:\"asset_in\"" ];
  uint64 asset_out         = 3 [ (gogoproto.moretags) = "yaml:\"asset_out\"" ];
}

message PairInfo{
  uint64 id                = 1;
  uint64 asset_in          = 2 [ (gogoproto.moretags) = "yaml:\"asset_in\"" ];
  string denom_in          = 3 [ (gogoproto.moretags) = "yaml:\"denom\"" ];
  uint64 asset_out         = 4 [ (gogoproto.moretags) = "yaml:\"asset_out\"" ];
  string denom_out         = 5 [ (gogoproto.moretags) = "yaml:\"denom\"" ];
}